--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,18 @@ allprojects {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = JavaVersion.VERSION_1_7
+        targetCompatibility = JavaVersion.VERSION_1_7
+
+        // Show all warnings except boot classpath
+        configure(options) {
+            compilerArgs << "-Xlint:-options"       // Turn off "missing" bootclasspath warning
+            encoding = "utf-8"                      // Make sure source encoding is UTF-8
+            incremental = true
+        }
+    }
+
     apply plugin: ProvidedPlugin
     apply plugin: "signing"
     apply plugin: "maven"
