--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,17 @@ jdk:
   - oraclejdk7
   - oraclejdk8
 
-cache:
-  directories:
-    - $HOME/.m2
+android:
+  components:
+    - tools
+    - platform-tools
+    - build-tools-20.0.0
+    - android-23
+    - addon-google_apis-google-23
+    - extra-android-m2repository
+    - extra-google-m2repository
 
 before_install:
-  - echo "y" | android update sdk --no-ui --filter platform-tools,tools
-  - echo "y" | android update sdk --no-ui --filter build-tools-20.0.0
-  - echo "y" | android update sdk --no-ui --filter android-23
-  - echo "y" | android update sdk --no-ui --filter addon-google_apis-google-23,extra-android-m2repository,extra-google-m2repository
   - ./scripts/install-dependencies.rb
 
 script:
