Remove dependency on external artifact repository for tests. Pass around classpaths for locally-built dependencies for tests within the Robolectric project.

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,11 @@ allprojects {
         from javadoc.destinationDir
     }
 
+    task provideBuildClasspath(type: ProvideBuildClasspathTask)
+
     test {
+        dependsOn provideBuildClasspath
+
         exclude "**/*\$*" // otherwise gradle runs static inner classes like TestRunnerSequenceTest$SimpleTest
         testLogging {
             events "failed"
