--- a/robolectric-utils/build.gradle
+++ b/robolectric-utils/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 
     compile "org.ow2.asm:asm:5.0.1"
     compile "org.ow2.asm:asm-commons:5.0.1"
+    compile "com.almworks.sqlite4java:sqlite4java:0.282"
     compile project(":robolectric-annotations")
     compile "com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework:2.1"
 
