remove gradle properties

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ allprojects {
         mavenCentral()
     }
 
+    group = "org.robolectric"
+    version = "3.2-SNAPSHOT"
+
     apply plugin: "java"
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
