--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'groovy'
+apply plugin: "groovy"
 
 repositories {
     mavenLocal()
@@ -8,5 +8,5 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.apache.velocity:velocity:1.7'
+    compile "org.apache.velocity:velocity:1.7"
 }
