--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -6,13 +6,26 @@ processResources {
     }
 }
 
+configurations {
+    shadow
+}
+
+project.sourceSets.test.compileClasspath += configurations.shadow
+
 dependencies {
     // Project dependencies
     compile project(":robolectric-annotations")
     compile project(":robolectric-resources")
     compile project(":robolectric-utils")
-    compileOnly project(":robolectric-shadows/shadows-core/v23")
-    runtime project(":robolectric-shadows/shadows-core/v23")
+    provided project(":robolectric-shadows/shadows-core/v23")
+
+    shadow project(":robolectric-shadows/shadows-core/v16")
+    shadow project(":robolectric-shadows/shadows-core/v17")
+    shadow project(":robolectric-shadows/shadows-core/v18")
+    shadow project(":robolectric-shadows/shadows-core/v19")
+    shadow project(":robolectric-shadows/shadows-core/v21")
+    shadow project(":robolectric-shadows/shadows-core/v22")
+    shadow project(":robolectric-shadows/shadows-core/v23")
 
     // Compile dependencies
     compile "org.ow2.asm:asm:5.0.1"
@@ -35,5 +48,4 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
-    testCompile project(":robolectric-shadows/shadows-core/v23")
 }
