--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'parent'
 
 include ":robolectric"
 include ":sandbox"
+include ":gradle-plugin"
 include ":junit"
 include ":utils"
 include ":utils:reflector"
