--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     provided "com.intellij:annotations:12.0"
 
     compile "org.apache.ant:ant:1.8.0"
-    compile "org.apache.maven:maven-ant-tasks:2.1.3"
+    compile("org.apache.maven:maven-ant-tasks:2.1.3") {
+        exclude group: "junit", module: "junit"
+    }
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
     provided "junit:junit:4.8.2"
 
