--- a/robolectric-shadows/shadows-play-services/build.gradle
+++ b/robolectric-shadows/shadows-play-services/build.gradle
@@ -20,3 +20,9 @@ dependencies {
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
 }
+
+install {
+    repositories.mavenInstaller {
+        pom.artifactId = 'shadows-play-services'
+    }
+}
