--- a/robolectric-shadows/shadows-support-v4/build.gradle
+++ b/robolectric-shadows/shadows-support-v4/build.gradle
@@ -27,6 +27,13 @@ dependencies {
     earlyRuntime "org.hamcrest:hamcrest-core:1.3"
 }
 
+// change local artifact name to match dependencies
+install {
+    repositories.mavenInstaller {
+        pom.artifactId = 'shadows-support-v4'
+    }
+}
+
 // hamcrest needs to come becore junit on runtime classpath; the gradle IntelliJ plugin
 //   needs the compileClasspath order patched too (bug?)
 sourceSets.main.compileClasspath = configurations.earlyRuntime + sourceSets.main.compileClasspath
