--- a/robolectric-shadows/shadows-core/build.gradle
+++ b/robolectric-shadows/shadows-core/build.gradle
@@ -49,9 +49,9 @@ dependencies {
     compile project(":robolectric-utils")
 
     // Compile dependencies
-    provided "com.intellij:annotations:12.0"
+    compileOnly "com.intellij:annotations:12.0"
     compile "com.almworks.sqlite4java:sqlite4java:0.282"
-    provided("org.robolectric:android-all:${AndroidSdk.versions[AndroidSdk.latestVersion]}") { force = true }
+    compileOnly("org.robolectric:android-all:${AndroidSdk.versions[AndroidSdk.latestVersion]}") { force = true }
     compile "com.ibm.icu:icu4j:53.1"
 
     jni "com.github.axet.litedb:libsqlite:0.282-3:natives-mac-x86_64"
