--- a/robolectric-shadows/shadows-maps/build.gradle
+++ b/robolectric-shadows/shadows-maps/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
+    testRuntime "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    testRuntime "com.google.android.maps:maps:23_r1"
 }
 
 // change local artifact name to match dependencies
