--- a/robolectric-shadows/shadows-support-v4/build.gradle
+++ b/robolectric-shadows/shadows-support-v4/build.gradle
@@ -5,7 +5,7 @@ shadows {
 }
 
 configurations {
-    earlyRuntime
+    earlyTestRuntime
 }
 
 dependencies {
@@ -24,7 +24,10 @@ dependencies {
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
 
-    earlyRuntime "org.hamcrest:hamcrest-core:1.3"
+    earlyTestRuntime "org.hamcrest:hamcrest-core:1.3"
+    testRuntime "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    testRuntime "com.android.support:support-v4:23.2.0"
+    testRuntime "com.android.support:internal_impl:23.2.0"
 }
 
 // change local artifact name to match dependencies
@@ -34,10 +37,7 @@ install {
     }
 }
 
-// hamcrest needs to come becore junit on runtime classpath; the gradle IntelliJ plugin
+// hamcrest needs to come before junit on runtime classpath; the gradle IntelliJ plugin
 //   needs the compileClasspath order patched too (bug?)
-sourceSets.main.compileClasspath = configurations.earlyRuntime + sourceSets.main.compileClasspath
-sourceSets.main.runtimeClasspath = configurations.earlyRuntime + sourceSets.main.runtimeClasspath
-
-sourceSets.test.compileClasspath = configurations.earlyRuntime + sourceSets.test.compileClasspath
-sourceSets.test.runtimeClasspath = configurations.earlyRuntime + sourceSets.test.runtimeClasspath
+sourceSets.test.compileClasspath = configurations.earlyTestRuntime + sourceSets.test.compileClasspath
+sourceSets.test.runtimeClasspath = configurations.earlyTestRuntime + sourceSets.test.runtimeClasspath
