--- a/robolectric-shadows/shadows-httpclient/build.gradle
+++ b/robolectric-shadows/shadows-httpclient/build.gradle
@@ -16,14 +16,14 @@ dependencies {
     // Compile dependencies
     earlyRuntime "org.apache.httpcomponents:httpcore:4.0.1"
     compile "org.apache.httpcomponents:httpclient:4.0.3"
-    compileOnly("org.robolectric:android-all:${AndroidSdk.versions[22]}") { force = true }
+    compileOnly(AndroidSdk.LOLLIPOP_MR1.coordinates) { force = true }
 
     // Testing dependencies
     testCompile "junit:junit:4.8.2"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
-    testRuntime "org.robolectric:android-all:${AndroidSdk.versions[22]}"
+    testRuntime AndroidSdk.LOLLIPOP_MR1.coordinates
 }
 
 // change local artifact name to match dependencies
