--- a/robolectric-shadows/shadows-maps/build.gradle
+++ b/robolectric-shadows/shadows-maps/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     compile project(":robolectric")
     compile project(":robolectric-shadows/shadows-core")
 
-    compileOnly "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    compileOnly AndroidSdk.MAX_SDK.coordinates
     compile "com.ibm.icu:icu4j:53.1"
 
     compileOnly "com.google.android.maps:maps:23_r1"
@@ -17,7 +17,7 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
-    testRuntime "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    testRuntime AndroidSdk.MAX_SDK.coordinates
     testRuntime "com.google.android.maps:maps:23_r1"
 }
 
