--- a/robolectric-shadows/shadows-play-services/build.gradle
+++ b/robolectric-shadows/shadows-play-services/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     compileOnly "com.google.android.gms:play-services-base:8.4.0"
     compileOnly "com.google.android.gms:play-services-basement:8.4.0"
 
-    compileOnly "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    compileOnly AndroidSdk.MAX_SDK.coordinates
 
     // Testing dependencies
     testCompile "junit:junit:4.8.2"
@@ -23,7 +23,7 @@ dependencies {
     testRuntime "com.google.android.gms:play-services-base:8.4.0"
     testRuntime "com.google.android.gms:play-services-basement:8.4.0"
 
-    testRuntime "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    testRuntime AndroidSdk.MAX_SDK.coordinates
 }
 
 install {
