--- a/robolectric-resources/build.gradle
+++ b/robolectric-resources/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "com.google.testing.compile:compile-testing:0.6"
-    testRuntime AndroidSdk.MAX_SDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
 }
