--- a/robolectric-shadows/shadows-support-v4/build.gradle
+++ b/robolectric-shadows/shadows-support-v4/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testCompile "org.mockito:mockito-core:1.8.0"
 
     earlyTestRuntime "org.hamcrest:hamcrest-core:1.3"
-    testRuntime AndroidSdk.MAX_SDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
     testRuntime "com.android.support:support-v4:23.2.0"
     testRuntime "com.android.support:internal_impl:23.2.0"
 }
