--- a/robolectric-utils/build.gradle
+++ b/robolectric-utils/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.mockito:mockito-core:1.9.5"
-    testRuntime AndroidSdk.MAX_SDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
 }
