--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
-    testRuntime AndroidSdk.MAX_SDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
 }
