--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,14 @@ language: android
 jdk:
   - oraclejdk7
   - oraclejdk8
+env:
+  matrix:
+    - APIs=16,17,18,19,20
+    - APIs=21,22,23,24
+  global:
+    - MALLOC_ARENA_MAX=2 # reduce memory usage, maybe avoid some exit 137's?
+    - secure: "AnsdYjHIvtLXrDMJmlf5FJhXJOW+aLSvsyXcGFLKse6EcwTSw8XnE4bGv2eSi2YWIwoHHCStIQbI0J02rkmUu9Z5oChxhOyGtCd8U4l1XciH2U7vJOJ/i9Auw5WgLM6x8HxgH6myhNrA9xrB4fcH+8WsDMf+qLqgvJQQjqQZQGM="
+    - secure: "tKWNiNnT+WPmHNY1MtXTgwId9peXtsKQ5owdOfZqmEQYTSHVdya5Bt3CiK8U829Pa1ZBuF+9mnGufTbw0WfQM5TKlClDn4ciEJzz6ChS2cqO+6trsWy335nppU7pQsDE44Irju+E7Jh4kIjfnB2pWRhI2YAoAUhNyz39PawXsz8="
 
 android:
   components:
@@ -22,7 +30,7 @@ before_install:
 
 script:
     - ./gradlew clean assemble install compileTest --info --stacktrace
-    - ./gradlew test --continue --info --stacktrace
+    - ./gradlew test --continue --info --stacktrace -Drobolectric.enabledApis=$APIs
 
 after_success:
   - ./scripts/deploy-snapshot.sh
@@ -37,9 +45,3 @@ cache:
   directories:
     - $HOME/.m2
     - $HOME/.gradle
-
-env:
-  global:
-    - MALLOC_ARENA_MAX=2 # reduce memory usage, maybe avoid some exit 137's?
-    - secure: "AnsdYjHIvtLXrDMJmlf5FJhXJOW+aLSvsyXcGFLKse6EcwTSw8XnE4bGv2eSi2YWIwoHHCStIQbI0J02rkmUu9Z5oChxhOyGtCd8U4l1XciH2U7vJOJ/i9Auw5WgLM6x8HxgH6myhNrA9xrB4fcH+8WsDMf+qLqgvJQQjqQZQGM="
-    - secure: "tKWNiNnT+WPmHNY1MtXTgwId9peXtsKQ5owdOfZqmEQYTSHVdya5Bt3CiK8U829Pa1ZBuF+9mnGufTbw0WfQM5TKlClDn4ciEJzz6ChS2cqO+6trsWy335nppU7pQsDE44Irju+E7Jh4kIjfnB2pWRhI2YAoAUhNyz39PawXsz8="
