--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -3,9 +3,11 @@ apply plugin: "groovy"
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url 'https://plugins.gradle.org/m2/' } // for gradle-processors
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile "gradle.plugin.org.inferred:gradle-processors:1.2.3"
 }
