--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,6 @@ allprojects {
     // it's weird that compileOnly deps aren't included for test compilation; fix that:
     project.sourceSets {
         test.compileClasspath += project.configurations.compileOnly
-
-        generated {
-            java {
-                srcDirs = ["build/classes/main"]
-                include "**/*.java"
-            }
-        }
     }
 
     apply plugin: "signing"
@@ -43,13 +36,10 @@ allprojects {
 
     task sourcesJar(type: Jar, dependsOn: classes) {
         classifier "sources"
-        from sourceSets.main.allSource, sourceSets.generated.allSource
+        from sourceSets.main.allJava
     }
 
-    javadoc {
-        source += sourceSets.generated.allSource
-        failOnError = false
-    }
+    javadoc.failOnError = false
 
     task javadocJar(type: Jar, dependsOn: javadoc) {
         classifier "javadoc"
