--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,12 @@ include ":robolectric-shadows/shadows-multidex"
 include ":robolectric-shadows/shadows-play-services"
 include ":robolectric-shadows/shadows-support-v4"
 include ":integration-tests/dependency-on-stubs"
+include ":integration-tests/sdks/16"
+include ":integration-tests/sdks/17"
+include ":integration-tests/sdks/18"
+include ":integration-tests/sdks/19"
+include ":integration-tests/sdks/21"
+include ":integration-tests/sdks/22"
+include ":integration-tests/sdks/23"
+include ":integration-tests/sdks/24"
+include ":integration-tests/sdks/25"
