--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ allprojects {
     }
 
     group = "org.robolectric"
-    version = "3.2"
+    version = "3.2.1-SNAPSHOT"
 
     apply plugin: "java"
     sourceCompatibility = JavaVersion.VERSION_1_7
