--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include ":robolectric-shadows/shadows-multidex"
 include ":robolectric-shadows/shadows-play-services"
 include ":robolectric-shadows/shadows-support-v4"
 include ":integration-tests/dependency-on-stubs"
+include ":integration-tests/libphonenumber"
 include ":integration-tests/mockito"
