--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
     }
 
     group = "org.robolectric"
-    version = "3.2.1-SNAPSHOT"
+    version = "3.2.1"
 
     apply plugin: "java"
     sourceCompatibility = JavaVersion.VERSION_1_7
