--- a/integration-tests/mockito/build.gradle
+++ b/integration-tests/mockito/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
     testCompile "com.android.support:support-v4:23.2.0"
     testCompile "com.android.support:internal_impl:23.2.0"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-    testCompile "org.assertj:assertj-core:2.0.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
 }
