--- a/robolectric-shadows/shadows-httpclient/build.gradle
+++ b/robolectric-shadows/shadows-httpclient/build.gradle
@@ -20,8 +20,8 @@ dependencies {
 
     // Testing dependencies
     testCompile "junit:junit:4.12"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-    testCompile "org.assertj:assertj-core:2.0.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime AndroidSdk.LOLLIPOP_MR1.coordinates
 }
