--- a/robolectric-shadows/shadows-maps/build.gradle
+++ b/robolectric-shadows/shadows-maps/build.gradle
@@ -14,8 +14,8 @@ dependencies {
     compileOnly "com.google.android.maps:maps:23_r1"
 
     testCompile "junit:junit:4.12"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-    testCompile "org.assertj:assertj-core:2.0.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
     testRuntime "com.google.android.maps:maps:23_r1"
