--- a/robolectric-shadows/shadows-play-services/build.gradle
+++ b/robolectric-shadows/shadows-play-services/build.gradle
@@ -16,8 +16,8 @@ dependencies {
 
     // Testing dependencies
     testCompile "junit:junit:4.12"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-    testCompile "org.assertj:assertj-core:2.0.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime "com.android.support:support-v4:23.2.0"
     testRuntime "com.google.android.gms:play-services-base:8.4.0"
