--- a/robolectric-utils/build.gradle
+++ b/robolectric-utils/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     // Compile dependencies
     compileOnly "junit:junit:4.12"
-    compileOnly "org.hamcrest:hamcrest-core:1.3"
+    compileOnly "org.hamcrest:hamcrest-junit:2.0.0.0"
     compileOnly AndroidSdk.MAX_SDK.coordinates
 
     compile "org.ow2.asm:asm:5.0.1"
@@ -11,8 +11,8 @@ dependencies {
 
     // Testing dependencies
     testCompile "junit:junit:4.12"
-    testCompile "org.assertj:assertj-core:2.0.0"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.assertj:assertj-core:2.6.0"
+    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
 }
