--- a/robolectric-core/build.gradle
+++ b/robolectric-core/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compileOnly "junit:junit:4.12"
 
     // Testing dependencies
+    testCompile project(":testutil")
     testCompile "junit:junit:4.12"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
