--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include ":robolectric-shadows/shadows-maps"
 include ":robolectric-shadows/shadows-multidex"
 include ":robolectric-shadows/shadows-play-services"
 include ":robolectric-shadows/shadows-support-v4"
+include ":testutil"
 include ":integration-tests/dependency-on-stubs"
 include ":integration-tests/libphonenumber"
 include ":integration-tests/mockito"
