--- a/testutil/build.gradle
+++ b/testutil/build.gradle
@@ -1,17 +1,13 @@
-new RoboJavaModulePlugin(
-        deploy: true
-).apply(project)
+new RoboJavaModulePlugin().apply(project)
 
 dependencies {
     // Compile dependencies
     compileOnly "junit:junit:4.12"
     compileOnly "org.hamcrest:hamcrest-junit:2.0.0.0"
-    compileOnly AndroidSdk.MAX_SDK.coordinates
 
     compile "org.ow2.asm:asm:5.0.1"
     compile "org.ow2.asm:asm-commons:5.0.1"
     compile project(":robolectric-annotations")
-    compile "com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework:2.1"
     compile "com.google.guava:guava:20.0"
     compileOnly "com.intellij:annotations:12.0"
 
@@ -20,5 +16,4 @@ dependencies {
     testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
     testCompile "org.mockito:mockito-core:2.5.4"
-    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
 }
