--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
 machine:
   environment:
     GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx4000m -XX:+HeapDumpOnOutOfMemoryError"'
+test:
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
