--- a/robolectric-junit/build.gradle
+++ b/robolectric-junit/build.gradle
@@ -5,19 +5,15 @@ new RoboJavaModulePlugin(
 dependencies {
     // Compile dependencies
     compile project(":robolectric-annotations")
-    compile project(":robolectric-utils")
+    compile project(":robolectric-instrumentation")
     compile project(":shadows-api")
 
-    compile "org.ow2.asm:asm:5.0.1"
-//    compile "org.ow2.asm:asm-util:5.0.1"
-    compile "org.ow2.asm:asm-commons:5.0.1"
-//    compile "org.ow2.asm:asm-analysis:5.0.1"
-    compile "com.google.guava:guava:20.0"
     compileOnly "com.intellij:annotations:12.0"
+
+    compile "junit:junit:4.12"
 
     testCompile "junit:junit:4.12"
     testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
     testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
-    testCompile project(":robolectric-junit")
 }
