--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'parent'
 
 include ":robolectric"
 include ":robolectric-instrumentation"
+include ":robolectric-junit"
 include ":robolectric-utils"
 include ":robolectric-processor"
 include ":robolectric-resources"
