--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'parent'
 
 include ":robolectric"
-include ":robolectric-instrumentation"
+include ":robolectric-sandbox"
 include ":robolectric-junit"
 include ":robolectric-utils"
 include ":robolectric-processor"
