--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ jdk:
   - oraclejdk7
   - oraclejdk8
 env:
-# to split into multiple Travis builds, uncomment this.
-#  matrix:
-#    - APIs=16,17,18,19,20
-#    - APIs=21,22,23,24
+  matrix: # split into multiple Travis builds:
+    - APIs=16,17,18,19,20
+    - APIs=21,22,23,24,25
   global:
     - MALLOC_ARENA_MAX=2 # reduce memory usage, maybe avoid some exit 137's?
     - secure: "AnsdYjHIvtLXrDMJmlf5FJhXJOW+aLSvsyXcGFLKse6EcwTSw8XnE4bGv2eSi2YWIwoHHCStIQbI0J02rkmUu9Z5oChxhOyGtCd8U4l1XciH2U7vJOJ/i9Auw5WgLM6x8HxgH6myhNrA9xrB4fcH+8WsDMf+qLqgvJQQjqQZQGM="
@@ -31,7 +30,7 @@ before_install:
 
 script:
     - ./gradlew clean assemble install compileTest --info --stacktrace
-    - ./gradlew test --continue --info --stacktrace # -Drobolectric.enabledSdks=$APIs
+    - ./gradlew test --continue --info --stacktrace -Drobolectric.enabledSdks=$APIs
 
 after_success:
   - ./scripts/deploy-snapshot.sh
