--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testCompileOnly AndroidSdk.MAX_SDK.coordinates // compile against latest Android SDK
-    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates // run against whatever this JDK supports
+//    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates // run against whatever this JDK supports
+    testRuntime AndroidSdk.JELLY_BEAN.coordinates // run against whatever this JDK supports
 }
