--- a/robolectric-shadows/shadows-core/build.gradle
+++ b/robolectric-shadows/shadows-core/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        mavenCentral() // or jcenter()
+    }
+
+    dependencies {
+        classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
+    }
+}
+
+apply plugin: 'ch.raffael.pegdown-doclet'
+
 new RoboJavaModulePlugin(
         deploy: true
 ).apply(project)
