--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include ":robolectric-shadows/shadows-maps"
 include ":robolectric-shadows/shadows-multidex"
 include ":robolectric-shadows/shadows-play-services"
 include ":robolectric-shadows/shadows-support-v4"
+include ":doclet"
 include ":testutil"
 include ":shadow-api"
 include ":integration-tests/dependency-on-stubs"
