--- a/robolectric-annotations/build.gradle
+++ b/robolectric-annotations/build.gradle
@@ -5,6 +5,6 @@ new RoboJavaModulePlugin(
 dependencies {
     // Compile dependencies
     compile project(":shadow-api")
-    compileOnly "com.intellij:annotations:12.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.1"
     compileOnly AndroidSdk.MAX_SDK.coordinates
 }
