--- a/robolectric-junit/build.gradle
+++ b/robolectric-junit/build.gradle
@@ -8,6 +8,6 @@ dependencies {
     compile project(":robolectric-sandbox")
     compile project(":shadow-api")
 
-    compileOnly "com.intellij:annotations:12.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.1"
     compileOnly "junit:junit:4.12"
 }
