--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     // Compile dependencies
     compile "org.bouncycastle:bcprov-jdk16:1.46"
     compile "com.thoughtworks.xstream:xstream:1.4.8"
-    compileOnly "com.intellij:annotations:12.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.1"
 
     compile "org.apache.ant:ant:1.8.0"
     compile("org.apache.maven:maven-ant-tasks:2.1.3") {
