--- a/shadow-api/build.gradle
+++ b/shadow-api/build.gradle
@@ -4,7 +4,7 @@ new RoboJavaModulePlugin(
 
 dependencies {
     // Compile dependencies
-    compileOnly "com.intellij:annotations:12.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.1"
 
     // Testing dependencies
     testCompile "junit:junit:4.12"
