--- a/testutil/build.gradle
+++ b/testutil/build.gradle
@@ -3,7 +3,7 @@ new RoboJavaModulePlugin().apply(project)
 dependencies {
     // Compile dependencies
     compileOnly "junit:junit:4.12"
-    compileOnly "com.intellij:annotations:12.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.1"
 
     // Testing dependencies
 }
