Prevent rebuild when NO_REBUILD=true.
Since we're building on jdk8 and running tests on jdk7, we need to defeat
up-to-date checks manually.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
 script:
   - ./gradlew clean assemble install compileTest --info --stacktrace
   - jdk_switcher use $JDK
-  - ./gradlew test --no-rebuild --continue --info --stacktrace -Drobolectric.enabledSdks=$APIs
+  - NO_REBUILD=true ./gradlew test --no-rebuild --continue --info --stacktrace -Drobolectric.enabledSdks=$APIs
   - jdk_switcher use oraclejdk8
 
 after_success:
